# Hypatia

./: .gitignore  CMakeLists.txt  README.md
Hypatia/: IServerFactory.cpp  IServerFactory.h  MinServer.1  PlainSettingReader.cpp  PlainSettingReader.h  PluginHandler.cpp  PluginHandler.h  PluginManager.cpp  PluginManager.h  ServerConfiguration.cpp  ServerConfiguration.h  ServerInstance.cpp  ServerInstance.h  ServerInstanceStub.cpp  ServerInstanceStub.h  ServerManager.cpp  ServerManager.h  main.cpp
Hypatia.xcodeproj/: project.pbxproj
Hypatia.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Hypatia.xcodeproj/project.xcworkspace/xcuserdata/Killercat.xcuserdatad/: UserInterfaceState.xcuserstate
Hypatia.xcodeproj/xcuserdata/Killercat.xcuserdatad/xcschemes/: MinServer.xcscheme  (+1 more)
Hypatia_Cocoa_Test/: Hypatia_Cocoa_Test-Info.plist  Hypatia_Cocoa_Test-Prefix.pch  Hypatia_Cocoa_Test.h  Hypatia_Cocoa_Test.mm
MinServer/: IServerFactory.cpp  IServerFactory.h  MinServer.1  PluginHandler.cpp  PluginHandler.h  PluginManager.cpp  PluginManager.h  ServerConfiguration.cpp  ServerConfiguration.h  ServerInstance.cpp  ServerInstance.h  ServerInstanceStub.cpp  ServerInstanceStub.h  ServerManager.cpp  ServerManager.h  main.cpp
MinServer.xcodeproj/: project.pbxproj
MinServer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SampleData/: Iris1.pse  Iris2.pse  Iris3.pse  ServerConfig.setting  ServerConfig.xml
loki-0.1.7/include/include.xcodeproj/: project.pbxproj
loki-0.1.7/loki-0.1.7.xcodeproj/: project.pbxproj
loki-0.1.7/src/src.xcodeproj/: project.pbxproj
(+14 files in other folders)
